--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,11 +1,14 @@
 Package: RWebApi
 Type: Package
-Title: What the package does (short line)
+Title: Google Geocodes Api
 Version: 1.0
 Date: 2016-09-28
-Author: Who wrote it
-Maintainer: Who to complain to <yourfault@somewhere.net>
-Description: More about what it does (maybe more than one line)
-License: What license is it under?
+Author: Aqeel, Marhawi
+Maintainer: Aqeel,Marhawi<aqeah478@student.liu.se>
+Description: The package connecting to the Google Maps api, with reference to Geocodes. The function takes the address as argutments, and returns the respective coordinates,location name etc.
+License: Liu
 RoxygenNote: 5.0.1
-Suggests: testthat
+Suggests: testthat,
+    knitr,
+    rmarkdown
+VignetteBuilder: knitr
